WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
194786
Uncaught Exception crash in MediaPlayerPrivateAVFoundationObjC::setShouldObserveTimeControlStatus()
https://bugs.webkit.org/show_bug.cgi?id=194786
Summary
Uncaught Exception crash in MediaPlayerPrivateAVFoundationObjC::setShouldObse...
Jer Noble
Reported
2019-02-18 13:10:43 PST
Uncaught Exception crash in MediaPlayerPrivateAVFoundationObjC::setShouldObserveTimeControlStatus()
Attachments
Patch
(2.03 KB, patch)
2019-02-18 13:13 PST
,
Jer Noble
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jer Noble
Comment 1
2019-02-18 13:11:01 PST
<
rdar://47916450
>
Radar WebKit Bug Importer
Comment 2
2019-02-18 13:11:27 PST
<
rdar://problem/48175397
>
Jer Noble
Comment 3
2019-02-18 13:12:24 PST
<
rdar://problem/47916450
>
Jer Noble
Comment 4
2019-02-18 13:13:38 PST
Created
attachment 362318
[details]
Patch
WebKit Commit Bot
Comment 5
2019-02-18 14:43:20 PST
Comment on
attachment 362318
[details]
Patch Clearing flags on attachment: 362318 Committed
r241738
: <
https://trac.webkit.org/changeset/241738
>
WebKit Commit Bot
Comment 6
2019-02-18 14:43:22 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug